# learning_cuda

./: README.md
Lesson_1/: sqaure_array.cu
Lesson_1/homework/: CMakeLists.txt  main.cpp  utils.h
assignments/lesson_1/: CMakeLists.txt  README.md  main.cpp  rgb2grey.cu  rgb2grey.h  utils.cpp  utils.h
assignments/lesson_2/: CMakeLists.txt  README.md  blur.cu  blur.h  main.cpp  utils.cpp  utils.h
assignments/lesson_3/: CMakeLists.txt  README.md  reference_calc.cpp  student_func.cu
assignments/lesson_4/: CMakeLists.txt  README.md  student_func.cu
assignments/lesson_5/: CMakeLists.txt  README.md  main.cu  student.cu
assignments/lesson_6/: CMakeLists.txt  README.md  student_func.cu
notes/lesson_1/: README.md
notes/lesson_2/: README.md  atomic.cu  non_deterministic_behaviour.cu
notes/lesson_3/: README.md  README.md~  reduce.cu  scanHillisSteele.cu
notes/lesson_4/: README.md
notes/lesson_5/: README.md  deviceQuery.cpp  transpose.cu
notes/lesson_6/: README.md
notes/lesson_7/: README.md
notes/lesson_8/: README.md
notes/lesson_8/code_snippets/: example_block_scan_cub.cu  gputimer.h  thrust_sort.cu  tiling.cu
notes/lesson_9/: README.md
working_examples_of_algorithms/: README.md  histogram_by_sorting_and_reducing_by_key.cu  radix_sort.cu  reduce.cu  scanHillisSteele.cu  scanHillisSteele_without_double_buffer.cu
